--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: St. Therese Educational Foundation Tacloban, Inc.
-baseurl: http://klmendoza1.github.io/sandbox-stefti
+title: Walang Wagi Sa Yosi | SmokeFree.PH
+#baseurl: http://klmendoza1.github.io/sandbox-smokefreeph
 
 # Build settings
 markdown: kramdown
