Fix baseurl in _config.yml for GitHub Pages deployment

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Walang Wagi Sa Yosi | SmokeFree.PH
-baseurl: http://klmendoza1.github.io/sandbox-smokefreeph
+baseurl: http://toffmendoza.me/sandbox-smokefreeph
 
 # Build settings
 markdown: kramdown
