Animations, styling for Info, href fixes

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Walang Wagi Sa Yosi | SmokeFree.PH
+title: Walang Wagi Sa Yosi - SmokeFree.PH
 baseurl: http://toffmendoza.me/sandbox-smokefreeph
 # baseurl: http://smokefree.ph
 
